tests/global_this_already_defined/global_this_already_defined.exp
Error ----------------------------------------------------------------------------------------------------- test.js:1:12

Cannot call `globalThis.alert` because property `alert` is missing in mixed [1]. [incompatible-use]

   test.js:1:12
   1| globalThis.alert(); // error: globalThis is defined to be mixed
                 ^^^^^

References:
   globals.js:1:27
   1| declare const globalThis: mixed; // intentional-libdef-override
                                ^^^^^ [1]



Found 1 error
